@@ -24,6 +24,9 @@ dpkg (1.16.4) UNRELEASED; urgency=low
     Thanks Wookey <wookey@wookware.org>.
   * Check parsed integers for invalid or no digit errors in start-stop-daemon
     and update-alternatives.
+  * Check all parsed integers for out of range errors; i.e. that no negative
+    values are allowed if not appropriate, and that no overflows occur.
+    Closes: #580038
 
   [ Updated man page translations ]
   * German (Helge Kreutzmann).
